# bevy_bones3

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  optimization.md  quality-of-life.md
.github/workflows/: ci.yml  deploy.yml
crates/bones3_core/: Cargo.toml  LICENSE  README.md
crates/bones3_core/src/: lib.rs
crates/bones3_core/src/math/: iterators.rs  region.rs
crates/bones3_core/src/query/: commands.rs  error.rs  mod.rs  system.rs
crates/bones3_core/src/storage/: chunk.rs  chunk_pointers.rs  data.rs  mod.rs
crates/bones3_core/src/util/: anchor.rs  mod.rs
crates/bones3_physics/src/: block_col.rs  chunk_builder.rs
crates/bones3_remesh/: Cargo.toml  README.md
crates/bones3_remesh/src/: block_model.rs  builder.rs  lib.rs  mesher.rs  mod.rs
crates/bones3_remesh/src/ecs/: components.rs  mod.rs  resources.rs  systems.rs
crates/bones3_remesh/src/mesh/: block_model.rs  builder.rs  error.rs  mod.rs
crates/bones3_remesh/src/query/: commands.rs  mod.rs
crates/bones3_remesh/src/vertex_data/: cube.rs  mod.rs  shape_builder.rs
crates/bones3_test_utils/: Cargo.toml  README.md
crates/bones3_test_utils/src/: lib.rs
crates/bones3_worldgen/: Cargo.toml  README.md
crates/bones3_worldgen/src/: anchor.rs  generator.rs  lib.rs  prep_chunks.rs  queue.rs
crates/bones3_worldgen/src/ecs/: components.rs  systems.rs
examples/: chunk_loading.rs  data_storage.rs  draw_mesh.rs  infinite_terrain.rs  mesh_generation.rs  terrain.rs  transparency.rs  wave_animation.rs
src/: lib.rs  plugin.rs  plugins.rs
src/anchor/: cache.rs  component.rs  mod.rs  systems.rs
src/events/: mod.rs
src/math/: iterators.rs  mod.rs  region.rs
src/meshing/: block_model.rs  builder.rs  mesher.rs  mod.rs  prep_chunks.rs
src/meshing/vertex_data/: cube.rs  mod.rs
src/query/: bundle.rs  commands.rs  error.rs  mod.rs  sector.rs  system.rs
src/storage/: block.rs  block_data.rs  block_list.rs  block_region.rs  chunk.rs  data.rs  events.rs  init_chunk_result.rs  mod.rs  sector.rs  systems.rs  voxel.rs  voxel_chunk.rs  voxel_world.rs  voxeldata_param.rs  world.rs  world_slice.rs
src/storage/events/: init_chunk_result.rs  mod.rs  unload_chunk_result.rs
src/world_gen/: anchor.rs  generator.rs  mod.rs  prep_chunks.rs  queue.rs
