[package]
name = "bevy_bones3"
version = "0.1.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "A voxel world storage and mesh generation plugin for Bevy."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/bevy_bones3"
repository = "https://github.com/TheDudeFromCI/bevy_bones3"
license = "Apache-2.0"
keywords = ["bevy", "voxel", "world", "plugin", "bones3"]
categories = ["games", "game-engines"]
exclude = [".github/", "crates/"]

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [] }
bones3_core = { path = "crates/bones3_core", version = "0.1.0" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["meshing", "world_gen", "physics"]
meshing = ["bevy/render", "bevy/bevy_asset"]
trace = ["bevy/trace"]
world_gen = []
physics = []

[workspace]
# members = ["crates/*"]
members = [
  "crates/bones3_core"
]
