[package]
name = "bevy_bones3"
version = "0.2.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "A voxel world storage and mesh generation plugin for Bevy."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/bevy_bones3"
repository = "https://github.com/TheDudeFromCI/bevy_bones3"
license = "Apache-2.0"
keywords = ["bevy", "voxel", "world", "plugin", "bones3"]
categories = ["games", "game-engines"]
exclude = [".github/", "crates/"]

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [] }
bones3_core = { path = "crates/bones3_core", version = "0.2.0" }
bones3_remesh = { path = "crates/bones3_remesh", version = "0.2.0", optional = true }

[dev-dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["meshing"]
meshing = ["bones3_remesh", "bevy/bevy_asset", "bevy/render", "bevy/x11"]

[workspace]
# members = ["crates/*"]
members = [
  "crates/bones3_core",
  "crates/bones3_test_utils",
  "crates/bones3_remesh"
]

[[example]]
name = "data_storage"

[[example]]
name = "mesh_generation"
required-features = ["meshing"]
