[package]
name = "bevy_bones3"
version = "0.5.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "A voxel world storage and mesh generation plugin for Bevy."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/bevy_bones3"
repository = "https://github.com/TheDudeFromCI/bevy_bones3"
license = "Apache-2.0"
keywords = ["bevy", "voxel", "world", "plugin", "bones3"]
categories = ["games", "game-engines"]
exclude = [".github/", "crates/"]

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = ["bevy_core_pipeline"] }
bones3_core = { path = "crates/bones3_core", version = "0.5.0" }
bones3_remesh = { path = "crates/bones3_remesh", version = "0.5.0", optional = true }
bones3_worldgen = { path = "crates/bones3_worldgen", version = "0.5.0", optional = true }

[dev-dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = [
  "meshing",
  "worldgen"
]
meshing = [
  "bones3_remesh",
  "bevy/bevy_asset",
  "bevy/bevy_render",
  "bevy/x11",
  "bevy/bevy_pbr",
  "bevy/ktx2",
  "bevy/zstd",
  "bevy/tonemapping_luts",
  "bones3_worldgen?/meshing"
]
worldgen = [
  "bones3_worldgen"
]

[workspace]
members = ["crates/*"]

[[example]]
name = "data_storage"

[[example]]
name = "mesh_generation"
required-features = ["meshing"]

[[example]]
name = "infinite_terrain"
required-features = ["meshing", "worldgen"]
