[package]
name = "bones3_core"
version = "0.4.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "The core functionality for the Bones Cubed plugin for Bevy."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/bevy_bones3"
repository = "https://github.com/TheDudeFromCI/bevy_bones3"
license = "Apache-2.0"
keywords = ["bones3"]

[features]
default = []

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = [] }
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.3.0"
