[package]
name = "bones3_remesh"
version = "0.2.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "Chunk mesh generation functionality for Bones Cubed."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/bevy_bones3"
repository = "https://github.com/TheDudeFromCI/bevy_bones3"
license = "Apache-2.0"
keywords = ["bones3"]

[features]
default = []

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = ["render", "bevy_asset"] }
bitflags = "1.3.2"
bones3_core = { path = "../bones3_core", version = "0.2.0" }
ordered-float = "3.4.0"
thiserror = "1.0.38"

[dev-dependencies]
bones3_test_utils = { path = "../bones3_test_utils", version = "0.2.0" }
pretty_assertions = "1.3.0"
