[package]
name = "bones3_test_utils"
version = "0.4.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "A collection of testing utilities, writing for Bones Cubed."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/bevy_bones3"
repository = "https://github.com/TheDudeFromCI/bevy_bones3"
license = "Apache-2.0"
keywords = ["bones3"]

[features]
default = []

[dependencies]
bevy = { version = "0.11.0", default-features = false, features = [] }
