[package]
name = "bones3_worldgen"
version = "0.4.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "A handler for the automatic loading and unloading of chunks based on world anchors."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/bevy_bones3"
repository = "https://github.com/TheDudeFromCI/bevy_bones3"
license = "Apache-2.0"
keywords = ["bones3"]

[features]
default = []
meshing = ["bones3_remesh"]

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [] }
bones3_core = { path = "../bones3_core", version = "0.4.0" }
bones3_remesh = { path = "../bones3_remesh", version = "0.4.0", optional = true }
futures-lite = "1.13.0"
itertools = "0.10.5"
ordered-float = "3.7.0"
priority-queue = "1.3.1"
sort_by_derive = "0.1.10"
